new branch html added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
     <main>
         <section id="gitKomanda">
             <ul>
-                <li></li>
-                <li></li>
+                <li>git Branching
+                    <ul>
+                        <li>-f sakos vardas-naujas sakos kurimas</li>
+                        <li>-l - grazina saku sarasa</li>
+                    </ul>
+                </li>
+                <li>git checkout
+                    <ul>
+                        <li>sakosvardas - nukelia i nurodyta saka</li>
+                        <li>-b sakosVardas-sukuria nauja saka ir i ja nukelia</li>
+                    </ul>
+
+                </li>
                 <li></li>
                 <li></li>
                 <li></li>
