--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
                         <li>sakosvardas - nukelia i nurodyta saka</li>
                         <li>-b sakosVardas-sukuria nauja saka ir i ja nukelia</li>
                     </ul>
-
                 </li>
-                <li></li>
+                <li>git push
+                    <ul>
+                        <li> - nusiunti pakeitimus i isorine repozitorija</li>
+                        <li> -u origin sakosvardas - viesini nauja saka</li>
+                    </ul>
+                </li>
                 <li></li>
                 <li></li>
             </ul>
