--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                         <li> -u origin sakosvardas - viesini nauja saka</li>
                     </ul>
                 </li>
-                <li></li>
+                <li>git merge
+                    <ul>
+                        <li>sakosvardas-prijungs prie dabartines sakos nurodyta saka</li>
+                    </ul>
+                </li>
                 <li></li>
             </ul>
         </section>
